tests/compile_fail/resolver_duplicate_definition.stderr
error: Identifier "meters" defined multiple times.
  --> tests/compile_fail/resolver_duplicate_definition.rs:10:11
   |
10 |     unit (meters, "m"): Length,
   |           ^^^^^^
11 |     unit (meters, "m"): Length,
   |           ^^^^^^
